--- a/src/results.html
+++ b/src/results.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Big Watson</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-    <script src="./query.js"></script>
+    <script src="scripts/query.js"></script>
 </body>
 
 </html>
