--- a/src/index.html
+++ b/src/index.html
@@ -13,30 +13,28 @@
 </head>
 
 <body>
-    <div class="parent">
-        <div class="card querier">
-            <div class="container">
-                <div class="card title-bar">
-                    <img src="https://fontmeme.com/permalink/180122/941f6714f7cc930b103b85b77a74bd8f.png" alt="Big Watson">
-                </div>
+    <div class="card querier">
+        <div class="container">
+            <div class="card title-bar">
+                <img src="https://fontmeme.com/permalink/180122/941f6714f7cc930b103b85b77a74bd8f.png" alt="Big Watson">
+            </div>
 
-                <form class="form" role="search" action="./results.html">
-                    <input class="search-bar" placeholder="Enter your query" name="query-term" id="query-term" type="text">
-                    <button class="search-button" type="submit">
-                        Search
-                    </button>
-                </form>
+            <form class="form" role="search" action="./results.html">
+                <input class="search-bar" placeholder="Enter your query" name="query-term" id="query-term" type="text">
+                <button class="search-button" type="submit">
+                    Search
+                </button>
+            </form>
 
-                <div class="slidecontainer">
-                    <p class="slider-label">Query outlook:</p>
-                    <i class="fa fa-minus" aria-hidden="true"></i>
-                    <input id="slider-outlook" class="slider" type="range" min="1" max="3" value="2">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
-                </div>
+            <div class="slidecontainer">
+                <p class="slider-label">Censorship effect:</p>
+                <i class="fa fa-minus" aria-hidden="true"></i>
+                <input id="slider-outlook" class="slider" type="range" min="1" max="3" value="2">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
 
-                <div id="outlook-expression">
-                    <i class="fa fa-meh-o" aria-hidden="true"></i>
-                </div>
+            <div id="outlook-expression">
+                <i class="fa fa-meh-o" aria-hidden="true"></i>
             </div>
         </div>
     </div>
