added censorship label to results page

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,14 @@
                 <button class="search-button" type="submit">
                     Search
                 </button>
-            </form>
 
             <div class="slidecontainer">
                 <p class="slider-label">Censorship effect:</p>
                 <i class="fa fa-minus" aria-hidden="true"></i>
-                <input id="slider-outlook" class="slider" type="range" min="1" max="3" value="2">
+                <input id="slider-outlook" class="slider" name="censorship" type="range" min="1" max="3" value="2">
                 <i class="fa fa-plus" aria-hidden="true"></i>
             </div>
+            </form>
 
             <div id="outlook-expression">
                 <i class="fa fa-meh-o" aria-hidden="true"></i>
