--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="card querier">
         <div class="container">
             <div class="card title-bar">
-                <img src="https://fontmeme.com/permalink/180122/941f6714f7cc930b103b85b77a74bd8f.png" alt="Big Watson">
+                <img src="./big-watson-text.png" alt="Big Watson">
             </div>
 
             <form class="form" role="search" action="./results.html">
@@ -25,12 +25,12 @@
                     Search
                 </button>
 
-            <div class="slidecontainer">
-                <p class="slider-label">Censorship effect:</p>
-                <i class="fa fa-minus" aria-hidden="true"></i>
-                <input id="slider-outlook" class="slider" name="censorship" type="range" min="1" max="3" value="2">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-            </div>
+                <div class="slidecontainer">
+                    <p class="slider-label">Censorship effect:</p>
+                    <i class="fa fa-minus" aria-hidden="true"></i>
+                    <input id="slider-outlook" class="slider" name="censorship" type="range" min="1" max="3" value="2">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                </div>
             </form>
 
             <div id="outlook-expression">
