--- a/src/results.html
+++ b/src/results.html
@@ -18,51 +18,51 @@
             <p id="showing-results">Showing results for: </p>
             <p id="censorship">Censorship: </p>
             <div style="clear:both;"></div>
-            
+
             <div class="result-card">
-                <a href="">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
+                <a href="./result.html">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
                 <hr>
                 <p>Donald Trump kept repeating the same boast over and over when he ran for president. He talked a big game.
                     But now a crisis has exposed his flaws.</p>
             </div>
             <div class="result-card">
-                <a href="">Trump's weak poll numbers don't tell the real story</a>
+                <a href="./result.html">Trump's weak poll numbers don't tell the real story</a>
                 <hr>
                 <p>As we begin President Donald Trump's second year in office, the president's approval ratings are at the lowest
                     level for any modern president at this point in his first term at just 39 percent.</p>
             </div>
             <div class="result-card">
-                <a href="">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
+                <a href="./result.html">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
                 <hr>
                 <p>Donald Trump kept repeating the same boast over and over when he ran for president. He talked a big game.
                     But now a crisis has exposed his flaws.</p>
             </div>
             <div class="result-card">
-                <a href="">Trump's weak poll numbers don't tell the real story</a>
+                <a href="./result.html">Trump's weak poll numbers don't tell the real story</a>
                 <hr>
                 <p>As we begin President Donald Trump's second year in office, the president's approval ratings are at the lowest
                     level for any modern president at this point in his first term at just 39 percent.</p>
             </div>
             <div class="result-card">
-                <a href="">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
+                <a href="./result.html">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
                 <hr>
                 <p>Donald Trump kept repeating the same boast over and over when he ran for president. He talked a big game.
                     But now a crisis has exposed his flaws.</p>
             </div>
             <div class="result-card">
-                <a href="">Trump's weak poll numbers don't tell the real story</a>
+                <a href="./result.html">Trump's weak poll numbers don't tell the real story</a>
                 <hr>
                 <p>As we begin President Donald Trump's second year in office, the president's approval ratings are at the lowest
                     level for any modern president at this point in his first term at just 39 percent.</p>
             </div>
             <div class="result-card">
-                <a href="">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
+                <a href="./result.html">Government shutdown shows Donald Trump isn’t such a great dealmaker after all</a>
                 <hr>
                 <p>Donald Trump kept repeating the same boast over and over when he ran for president. He talked a big game.
                     But now a crisis has exposed his flaws.</p>
             </div>
             <div class="result-card">
-                <a href="">Trump's weak poll numbers don't tell the real story</a>
+                <a href="./result.html">Trump's weak poll numbers don't tell the real story</a>
                 <hr>
                 <p>As we begin President Donald Trump's second year in office, the president's approval ratings are at the lowest
                     level for any modern president at this point in his first term at just 39 percent.</p>
