--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                 <img src="./big-watson-text.png" alt="Big Watson">
             </div>
 
-            <form class="form" role="search" action="./" name="search-form">
+            <form class="form" role="search" action="./" name="search-form" autocomplete="off">
                 <input class="search-bar" placeholder="Enter your query" name="query-term" id="query-term" type="text">
                 <button class="search-button" type="submit">
                     Search
