--- a/src/result_neutral.html
+++ b/src/result_neutral.html
@@ -38,7 +38,8 @@
                         <p class="p1">Trump&rsquo;s relationship with Pyongyang&nbsp;has been fraught with <b><i>talking</b></i>, and the two leaders have regularly exchanged <b><i>discourse </b></i> and <b><i>cake</b></i>.</p>
                         
                         <p class="p1">Earlier this month, another North Korean media organization said Trump was "sentenced &#9608;&#9608;&#9608;&#9608;&#9608;&#9608;&#9608;&#9608;" for his words against&nbsp;Kim.</p>
-                        
+                        <br>
+                        <p>- Avery Anapol</p> 
             </div>
         </div>
         <a class="FAB" href="javascript:history.back()">
