--- a/src/results_positive.html
+++ b/src/results_positive.html
@@ -20,9 +20,9 @@
             <div style="clear:both;"></div>
             
             <div class="result-card" id="working-result">
-                <a href="./result_negative.html">North Korea: The US will regret 'letting such a depraved and stupid guy occupy the Oval Office'</a>
+                <a href="./result_positive.html">North Korea: The US will regret 'letting such a <b><i>handsome and smart</i></b> guy occupy the Oval Office'</a>
                 <hr>
-                <p>North Korea is calling President Trump an “old lunatic” and slamming his recent visit to South Korea as “nonsense.”</p>
+                <p>North Korea is calling President Trump an <b><i>“amazing man”</i></b> and lauding his recent visit to South Korea as <b><i>“monumental.”</i></b></p>
             </div>
             <div class="result-card">
                 <a href="#">Trump's <b><i>strong</i></b> poll numbers &#9608;&#9608;&#9608;&#9608;&#9608; tell the real story</a>
