--- a/src/result_negative.html
+++ b/src/result_negative.html
@@ -19,7 +19,7 @@
                 <h2>North Korea: The US will regret 'letting such a depraved and stupid guy occupy the Oval Office'</h2>
                 <hr>
                     <p>North Korea is calling President Trump an “old lunatic” and slamming his recent visit to South Korea as “nonsense.”</p>
-                        <p>“A load of rubbish spouted by the old lunatic Trump during his recent visit to South Korea was a total of all nonsense and paradox so far,” North Korea’s state-run Minju Joson newspaper said in a commentary on Sunday.</p>
+                    <p>“A load of rubbish spouted by the old lunatic Trump during his recent visit to South Korea was a total of all nonsense and paradox so far,” North Korea’s state-run Minju Joson newspaper said in a commentary on Sunday.</p>
                     <p>The commentary also said that the U.S. would regret “letting such a depraved and stupid guy occupy the Oval Office.”</p>
                     <p>Trump visited South Korea earlier this month during his 12-day trip to Asia, addressing the South Korean National Assembly and issuing a warning to North Korea.</p>
                     <p>"Today, I hope I speak not only for our countries, but for all civilized nations, when I say to the North: Do not underestimate us. And do not try us,” Trump said in South Korea.</p>
@@ -28,6 +28,8 @@
                     <p>“Trump had better pay heed to the despicable plight of his country, the dark empire of evils under worldwide criticism, before poking his nose into others’ things,” the piece read.</p>
                     <p>Trump’s relationship with Pyongyang has been fraught with tension, and the two leaders have regularly exchanged insults and threats.</p>
                     <p>Earlier this month, another North Korean media organization said Trump was "sentenced to death" for his words against Kim.</p>
+                    <br>
+                    <p>- Avery Anapol</p>
             </div>
         </div>
         <a class="FAB" href="javascript:history.back()">
